fix overflow-x

--- a/src/Components/Style/Home.css
+++ b/src/Components/Style/Home.css
@@ -5,6 +5,7 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 1500px;
+    overflow-x: hidden;
 }
 
 .banner{
